feat: adiciona estilos básicos e corrige caminho do CSS no index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous" />
-    <link rel="stylesheet" href="/public/css/styles.css" />
+    <link rel="stylesheet" href="public/css/styles.css" />
   </head>
   <body>
     <header>
@@ -44,7 +44,7 @@
       <h1 id="main-title" class="text-center">
         Garanta sua vaga no mercado de trabalho
       </h1>
-      <p class="main-subtitle" class="text-center">
+      <p id="main-subtitle" class="text-center">
         Encontre as melhores vagas no empre que tanto almeja, voltado pra
         programadores que sonham em trabalhar home office
       </p>
